fix: fix scrollbars on login/logout pages

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -4,6 +4,7 @@
 
 .app-wrapper {
   display: flex;
+  min-height: 100vh;;
 }
 
 .app-main {
